--- a/style.css
+++ b/style.css
@@ -68,10 +68,10 @@ header{
 	transition: all .2s ease;
 }
 .card-link:focus{
-	color:#99aab5;
+	color:var(--icon-hover);
 }
 .card-link:hover{
-	color:#99aab5;
+	color:var(--icon-hover);
 }
 .card-body{
 	color: var(--text-color);
